# drawdesk

./: CLAUDE.md  LICENSE  README.md  drawdesk.desktop  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: patch-excalidraw-picks.mjs
src/: App.css  App.tsx  excalidraw-md.ts  image.ts  index.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
